# RacingManager

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: AppLauncher.cpp  AppLauncher.h  TelemetryPoller.cpp  TelemetryPoller.h
src/iracing/: IRacingReader.cpp  IRacingReader.h  TelemetryData.h
src/overlay/: DeltaOverlay.cpp  DeltaOverlay.h  OverlayWindow.cpp  OverlayWindow.h
src/overlay/panels/: DeltaPanel.cpp  DeltaPanel.h  StintPanel.cpp  StintPanel.h  TyrePanel.cpp  TyrePanel.h
src/ui/: AppLauncherDialog.cpp  AppLauncherDialog.h  MainWindow.cpp  MainWindow.h  OverlayManager.cpp  OverlayManager.h
